--- a/emi/emi_refs.bib
+++ b/emi/emi_refs.bib
@@ -1,7 +1,8 @@
 @techreport{itu372,
-  title={372: Radio Noise http://www. itu. int/rec},
+  title={372: Radio Noise},
   author={ITU, Recommendation P},
-  institution={R-REC-P. 372/en}
+  institution={R-REC-P. 372/en},
+  note = {\url{http://www.itu.int/rec}}
 }
 @misc{wikipedia_pulse,
   title = {{Pulse Wave}},
@@ -15,4 +16,26 @@
 @misc{wikiversity_rect,
   title = {{Discrete Time Rect Functions}},
   note = {\url{https://upload.wikimedia.org/wikiversity/en/0/0f/FPairs.4.B.DTRect.201304020.pdf}}
+}
+
+@misc{lz1aq,
+  title = {{LZ1AQ Projects}},
+  note = {\url{http://www.lz1aq.signacor.com/}}
+}
+
+@misc{k5jy_log,
+  title = {{The Loop on Ground Antenna}},
+  note = {\url{http://www.kk5jy.net/LoG/}}
+}
+
+@misc{duffy_lig,
+  title = {{Loop in Ground for Rx only on low HF}},
+  note = {\url{https://owenduffy.net/blog/?tag=lig}}
+}
+
+@article{kraus1988antennas,
+  title={{Antennas}},
+  author={Kraus, John D},
+  journal={McGraw-Hill},
+  year={1988}
 }
